--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,9 @@ dependencies {
 
     // Local Tests
     testImplementation 'junit:junit:4.12'
+
     // Instrumented Tests
+    debugImplementation "androidx.fragment:fragment-testing:1.3.4"
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
