--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,13 @@ android {
     buildFeatures {
         viewBinding true
     }
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -60,6 +67,8 @@ dependencies {
 
     // Local Tests
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:3.8.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     // Instrumented Tests
     debugImplementation "androidx.fragment:fragment-testing:1.3.4"
